--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "⛦ 𝐁𝐫𝐚𝐧𝐝𝐫𝐝 𝐗 𝐌𝐮𝐬𝐢𝐜 ⛦",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/62fa7c81c56c1ae31c844.jpg",
+    "logo": "https://telegra.ph/file/40b79a0c4fb7f1fc5e8d9.jpg",
     "keywords": [
     "python3",
     "telegram",
